adjusted footer and scaling, removed socials, fixed dark mode flickering on refresh

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
 }
 
 /* NavBar Styling */
@@ -36,20 +43,6 @@ html, body {
 
 .navbackg ul li a:hover {
     color: #fcfafa;
-}
-
-/* Social Links */
-.navsocials ol {
-    display: flex;
-    list-style-type: none;
-    gap: 2vh;
-    margin: 0;
-    padding: 0;
-}
-
-.navsocials ol li a {
-    text-decoration: none;
-    color: black;
 }
 
 /* Hamburger Menu */
@@ -110,7 +103,8 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .footerp p {
@@ -132,12 +126,16 @@ html, body {
 
 /* Dark Mode Toggle Button */
 .dark-mode-toggle {
+    position: fixed;
+    top: .5vh;
+    right: 2vh;
     background-color: transparent;
     border: none;
     font-size: 20px;
     cursor: pointer;
     margin-left: auto;
     margin-right: 2vh;
+    z-index: 200;
 }
 
 .dark-mode-toggle:focus {
@@ -160,10 +158,6 @@ html, body {
 
 .dark-mode .navbackg ul li a:hover {
     color: #bbe0ff;
-}
-
-.dark-mode .navsocials ol li a {
-    color: #f5f5f5;
 }
 
 .dark-mode .footerp {
